# BackendAPI/WebAPI/WebAPI/Controllers/FavoritesListController.cs
@@ -1,6 +1,7 @@
 ﻿using AutoMapper;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
+using Microsoft.EntityFrameworkCore.Migrations;
 using WebAPI.Data;
 using WebAPI.DTOs;
 using WebAPI.Interfaces;
@@ -27,6 +28,37 @@ namespace WebAPI.Controllers
             var favoritesList = await _uow.favoritesListRepository.GetFavoritesLists(name);
             var favoritesListDto = _mapper.Map<IEnumerable<FavoritesListDto>>(favoritesList);
             return Ok(favoritesListDto);
+        }
+
+        [HttpPost("AddFacvoritesList/{name}/{proID}")]
+        public async Task<IActionResult> AddFacvoritesList(string name, int proID)
+        {
+            var favoritesList = await _uow.favoritesListRepository.AddFavoritesLists(name, proID);
+            if (favoritesList != null)
+            {
+                await _uow.SaveAsync();
+                return StatusCode(201);
+            }
+
+            else
+            {
+                return BadRequest("Failed to add property to favorites list.");
+            }
+        }
+        [HttpDelete("DeleteFacvoritesList/{FavId}")]
+        public async Task<IActionResult> DeleteFacvoritesList(int FavId)
+        {
+            var favoritesList = await _uow.favoritesListRepository.DeleteFavoritesLists(FavId);
+            if (favoritesList != null)
+            {
+                await _uow.SaveAsync();
+                return StatusCode(201);
+            }
+
+            else
+            {
+                return BadRequest("Failed to add property to favorites list.");
+            }
         }
     }
 }
